Refactor Taskfiles and environment configuration
- Removed PROJECT_VERSION from .env.example and updated Taskfile.yml to use a static version.
- Consolidated Docker Taskfile structure and added swarm Taskfile for Docker Swarm management.
- Enhanced env Taskfile with validation dependencies and improved error messages.
- Introduced Node.js Taskfile for managing Node.js project dependencies.
- Added package.json and package-lock.json for project dependency management.

--- a/env/Taskfile.yml
+++ b/env/Taskfile.yml
@@ -1,5 +1,5 @@
 version: '3'
-
+# Taskfile pour la gestion des variables d'environnement
 tasks:
   init:
     desc: "Initialise le fichier .env depuis .env.example"
@@ -22,10 +22,11 @@ tasks:
   validate:
     desc: "Valide la configuration du fichier .env"
     silent: true
+    deps: [ init ]
     cmds:
     - |
       if [ ! -f ".env" ]; then
-        echo "❌ Fichier .env non trouvé. Exécutez 'task env-init' d'abord."
+        echo "❌ Fichier .env non trouvé. Exécutez 'task env:init' d'abord."
         exit 1
       fi
     - echo "✅ Fichier .env trouvé"
