--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,11 +8,12 @@ includes:
   docker: ./docker/Taskfile.yml
   utils: ./utils/Taskfile.yml
   env: ./env/Taskfile.yml
+  nodejs: ./nodejs/Taskfile.yml
 
 vars:
   # Variables avec valeurs par défaut depuis .env ou valeurs de fallback
   PROJECT_NAME: '{{.PROJECT_NAME | default "taskfiles-collection"}}'
-  PROJECT_VERSION: '{{.PROJECT_VERSION | default "1.0.0"}}'
+  PROJECT_VERSION: '1.0.0'
   ENVIRONMENT: '{{.ENVIRONMENT | default "development"}}'
 
 tasks:
@@ -20,16 +21,18 @@ tasks:
     desc: "Affiche l'aide et les tâches disponibles"
     silent: true
     cmds:
-    - echo "🛠️  {{.PROJECT_NAME}} v{{.PROJECT_VERSION}} - Collection de Taskfiles"
-    - echo "Environnement:" {{.ENVIRONMENT}}
+    - echo "🛠️  Collection de Taskfiles pour le développement"
     - echo ""
     - echo "Tâches globales disponibles :"
     - task --list
     - echo ""
-    - echo "Pour voir les tâches d'une technologie spécifique :"
-    - echo "  task utils --list # Tâches utilitaires"
-    - echo "  task docker --list # Tâches Docker"
-    - echo ""
+
+  info:
+    desc: "Affiche les informations du projet avec les variables d'environnement"
+    cmds:
+    - |
+      echo "🛠️  {{.PROJECT_NAME}} v{{.PROJECT_VERSION}} - Collection de Taskfiles"
+      echo "Environnement: {{.ENVIRONMENT}}"
 
   help:
     desc: "Affiche l'aide détaillée"
