Refactor network tasks to use a variable for Docker format in network checks

--- a/docker/network/Taskfile.yml
+++ b/docker/network/Taskfile.yml
@@ -24,7 +24,8 @@ tasks:
       task docker:network:create NETWORK_NAME=mon-reseau NETWORK_DRIVER=overlay
     cmds:
     - |
-      if docker network ls --format "{{{{.Name}}}}" | grep -q "^{{.NETWORK_NAME}}$"; then
+      DOCKER_FORMAT="table {{.Name}}"
+      if docker network ls --format "$DOCKER_FORMAT" | grep -q "^{{.NETWORK_NAME}}$"; then
         echo "⚠️  Le réseau '{{.NETWORK_NAME}}' existe déjà"
         docker network inspect {{.NETWORK_NAME}}
       else
@@ -60,7 +61,8 @@ tasks:
       task docker:network:inspect NETWORK_NAME=mon-reseau
     cmds:
     - |
-      if docker network ls --format "{{{{.Name}}}}" | grep -q "^{{.NETWORK_NAME}}$"; then
+      DOCKER_FORMAT="table {{.Name}}"
+      if docker network ls --format "$DOCKER_FORMAT" | grep -q "^{{.NETWORK_NAME}}$"; then
         echo "🔍 Inspection du réseau '{{.NETWORK_NAME}}' :"
         docker network inspect {{.NETWORK_NAME}}
       else
@@ -85,7 +87,8 @@ tasks:
       task docker:network:remove NETWORK_NAME=mon-reseau
     cmds:
     - |
-      if docker network ls --format "{{{{.Name}}}}" | grep -q "^{{.NETWORK_NAME}}$"; then
+      DOCKER_FORMAT="table {{.Name}}"
+      if docker network ls --format "$DOCKER_FORMAT" | grep -q "^{{.NETWORK_NAME}}$"; then
         echo "🗑️  Suppression du réseau '{{.NETWORK_NAME}}'..."
         docker network rm {{.NETWORK_NAME}}
         echo "✅ Réseau '{{.NETWORK_NAME}}' supprimé avec succès"
