Add tasks to check container readiness and health in Docker stack

--- a/docker/monitor/Taskfile.yml
+++ b/docker/monitor/Taskfile.yml
@@ -2,9 +2,14 @@ version: '3'
 
 vars:
   IMAGE_NAME: '{{.IMAGE_NAME | default ""}}'
+  CONTAINER_NAME: '{{.CONTAINER_NAME | default ""}}'
+  CONTAINERS: '{{.CONTAINERS | default ""}}'
+  STACK_NAME: '{{.STACK_NAME | default "taskfiles-stack"}}'
+  TIMEOUT: '{{.TIMEOUT | default "300"}}'
+  CHECK_INTERVAL: '{{.CHECK_INTERVAL | default "10"}}'
 
 tasks:
-  monitor:container:start:
+  container:start:
     desc: "Surveille le lancement de conteneurs en temps réel"
     silent: true
     preconditions:
@@ -33,7 +38,7 @@ tasks:
         docker events --filter container --filter event=start --format "{{{{.TimeNano}}}} - 🚀 Container {{{{.Actor.Attributes.name}}}} ({{{{.Actor.Attributes.image}}}}) started"
       fi
 
-  monitor:events:
+  events:
     desc: "Surveille tous les événements Docker"
     silent: true
     preconditions:
@@ -70,3 +75,288 @@ tasks:
 
       echo ""
       docker events $filters --format "{{{{.Time}}}} - {{{{.Action}}}} - {{{{.Actor.Attributes.name}}}} ({{{{.Actor.Attributes.image}}}})"
+
+  container:status:
+    desc: "Vérifie le statut d'un conteneur spécifique"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Affiche le statut détaillé d'un conteneur.
+
+      Variables:
+      - CONTAINER_NAME: Nom du conteneur (requis)
+
+      Exemple:
+      task docker:monitor:container:status CONTAINER_NAME=mon-conteneur
+    cmds:
+    - |
+      if [ -z "{{.CONTAINER_NAME}}" ]; then
+        echo "❌ CONTAINER_NAME est requis"
+        echo "📋 Conteneurs disponibles :"
+        docker ps -a --format "table {{{{.Names}}}}\t{{{{.Image}}}}\t{{{{.Status}}}}"
+        exit 1
+      fi
+
+      echo "🔍 Statut du conteneur '{{.CONTAINER_NAME}}' :"
+      echo ""
+
+      # Vérifier si le conteneur existe
+      if ! docker ps -a --filter "name={{.CONTAINER_NAME}}" --format "{{{{.Names}}}}" | grep -q "^{{.CONTAINER_NAME}}$"; then
+        echo "❌ Le conteneur '{{.CONTAINER_NAME}}' n'existe pas"
+        exit 1
+      fi
+
+      # Informations de base
+      echo "📊 Informations générales :"
+      docker ps -a --filter "name={{.CONTAINER_NAME}}" --format "table {{{{.Names}}}}\t{{{{.Image}}}}\t{{{{.Status}}}}\t{{{{.Ports}}}}"
+
+      echo ""
+      echo "🏥 État de santé :"
+      health_status=$(docker inspect {{.CONTAINER_NAME}} --format='{{{{.State.Health.Status}}}}' 2>/dev/null || echo "no-healthcheck")
+
+      case $health_status in
+        "healthy")
+          echo "  ✅ Sain"
+          ;;
+        "unhealthy")
+          echo "  ❌ Non sain"
+          echo "  📋 Derniers checks :"
+          docker inspect {{.CONTAINER_NAME}} --format='{{{{range .State.Health.Log}}}}{{{{.Start}}}} - {{{{.ExitCode}}}} - {{{{.Output}}}}{{{{end}}}}' | tail -5
+          ;;
+        "starting")
+          echo "  🟡 Démarrage en cours"
+          ;;
+        "no-healthcheck")
+          echo "  ℹ️  Pas de healthcheck configuré"
+          ;;
+        *)
+          echo "  ❓ État inconnu ($health_status)"
+          ;;
+      esac
+
+      echo ""
+      echo "💾 Utilisation des ressources :"
+      docker stats {{.CONTAINER_NAME}} --no-stream --format "table {{{{.Container}}}}\t{{{{.CPUPerc}}}}\t{{{{.MemUsage}}}}\t{{{{.NetIO}}}}\t{{{{.BlockIO}}}}"
+
+  stack:health:
+    desc: "Vérifie la santé globale d'une stack Docker"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Affiche un rapport de santé complet d'une stack Docker Swarm.
+
+      Variables:
+      - STACK_NAME: Nom de la stack (défaut: taskfiles-stack)
+
+      Exemple:
+      task docker:monitor:stack:health STACK_NAME=production
+    cmds:
+    - |
+      if ! docker stack ls --format "{{{{.Name}}}}" | grep -q "^{{.STACK_NAME}}$"; then
+        echo "❌ La stack '{{.STACK_NAME}}' n'existe pas"
+        echo "📋 Stacks disponibles :"
+        docker stack ls
+        exit 1
+      fi
+
+      echo "🏥 Rapport de santé de la stack '{{.STACK_NAME}}' :"
+      echo ""
+
+      echo "🔧 Services :"
+      docker stack services {{.STACK_NAME}} --format "table {{{{.Name}}}}\t{{{{.Replicas}}}}\t{{{{.Image}}}}"
+
+      echo ""
+      echo "📦 Tâches/Conteneurs :"
+      docker stack ps {{.STACK_NAME}} --format "table {{{{.Name}}}}\t{{{{.Node}}}}\t{{{{.DesiredState}}}}\t{{{{.CurrentState}}}}"
+
+      echo ""
+      echo "🔍 Analyse détaillée :"
+
+      # Compter les services en bonne santé
+      running_tasks=$(docker stack ps {{.STACK_NAME}} --filter "desired-state=running" --format "{{{{.CurrentState}}}}" | grep -c "Running" || echo "0")
+      total_tasks=$(docker stack ps {{.STACK_NAME}} --filter "desired-state=running" --format "{{{{.Name}}}}" | wc -l)
+
+      echo "  📊 Tâches en cours : $running_tasks/$total_tasks"
+
+      if [ "$running_tasks" -eq "$total_tasks" ] && [ "$total_tasks" -gt 0 ]; then
+        echo "  ✅ Tous les services sont opérationnels"
+      else
+        echo "  ⚠️  Certains services ne sont pas opérationnels"
+        echo "  🔍 Services problématiques :"
+        docker stack ps {{.STACK_NAME}} --filter "desired-state=running" --format "table {{{{.Name}}}}\t{{{{.CurrentState}}}}" | grep -v "Running"
+      fi
+
+  containers:batch:status:
+    desc: "Vérifie le statut de plusieurs conteneurs"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Vérifie le statut de plusieurs conteneurs d'une liste.
+
+      Variables:
+      - CONTAINERS: Liste des conteneurs séparés par des virgules (requis)
+      - STACK_NAME: Nom de la stack pour préfixer les noms (optionnel)
+
+      Exemple:
+      task docker:monitor:containers:batch:status CONTAINERS="traefik,portainer,app" STACK_NAME=production
+    cmds:
+    - |
+      if [ -z "{{.CONTAINERS}}" ]; then
+        echo "❌ CONTAINERS est requis (ex: 'traefik,portainer,app')"
+        exit 1
+      fi
+
+      echo "📊 Statut des conteneurs : {{.CONTAINERS}}"
+      echo ""
+
+      # Convertir la liste en tableau
+      IFS=',' read -ra CONTAINER_ARRAY <<< "{{.CONTAINERS}}"
+
+      for container in "${CONTAINER_ARRAY[@]}"; do
+        container=$(echo "$container" | xargs)  # Trim whitespace
+        
+        if [ -n "{{.STACK_NAME}}" ]; then
+          full_name="{{.STACK_NAME}}_${container}"
+        else
+          full_name="$container"
+        fi
+        
+        echo "🔍 $container :"
+        
+        # Vérifier si le conteneur existe et est en cours d'exécution
+        if docker ps --filter "name=$full_name" --format "{{{{.Names}}}}" | grep -q "$full_name"; then
+          status=$(docker ps --filter "name=$full_name" --format "{{{{.Status}}}}")
+          echo "  ✅ Actif - $status"
+          
+          # Vérifier l'état de santé si disponible
+          health_status=$(docker inspect "$full_name" --format='{{{{.State.Health.Status}}}}' 2>/dev/null || echo "no-healthcheck")
+          if [ "$health_status" != "no-healthcheck" ]; then
+            case $health_status in
+              "healthy") echo "  🏥 Sain" ;;
+              "unhealthy") echo "  🚨 Non sain" ;;
+              "starting") echo "  🟡 Vérification de santé en cours" ;;
+            esac
+          fi
+        else
+          echo "  ❌ Non actif ou inexistant"
+        fi
+        echo ""
+      done
+
+  wait:stack:ready:
+    desc: "Attend qu'une stack soit complètement déployée"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Attend que tous les services d'une stack soient dans l'état "Running".
+
+      Variables:
+      - STACK_NAME: Nom de la stack (défaut: taskfiles-stack)
+      - TIMEOUT: Timeout en secondes (défaut: 300)
+      - CHECK_INTERVAL: Intervalle entre les vérifications (défaut: 10)
+
+      Exemple:
+      task docker:monitor:wait:stack:ready STACK_NAME=production TIMEOUT=600
+    cmds:
+    - |
+      if ! docker stack ls --format "{{{{.Name}}}}" | grep -q "^{{.STACK_NAME}}$"; then
+        echo "❌ La stack '{{.STACK_NAME}}' n'existe pas"
+        exit 1
+      fi
+
+      echo "⏳ Attente que la stack '{{.STACK_NAME}}' soit prête..."
+      echo "🕐 Timeout: {{.TIMEOUT}}s, Intervalle: {{.CHECK_INTERVAL}}s"
+      echo ""
+
+      start_time=$(date +%s)
+      timeout_time=$((start_time + {{.TIMEOUT}}))
+
+      while true; do
+        current_time=$(date +%s)
+        
+        if [ $current_time -gt $timeout_time ]; then
+          echo "❌ Timeout atteint ({{.TIMEOUT}}s). La stack n'est pas complètement prête."
+          echo "📊 État actuel :"
+          docker stack ps {{.STACK_NAME}} --format "table {{{{.Name}}}}\t{{{{.CurrentState}}}}\t{{{{.Error}}}}"
+          exit 1
+        fi
+        
+        # Compter les tâches en cours d'exécution
+        running_tasks=$(docker stack ps {{.STACK_NAME}} --filter "desired-state=running" --format "{{{{.CurrentState}}}}" | grep -c "Running" || echo "0")
+        total_tasks=$(docker stack ps {{.STACK_NAME}} --filter "desired-state=running" --format "{{{{.Name}}}}" | wc -l)
+        
+        elapsed=$((current_time - start_time))
+        echo "⏳ Progression: $running_tasks/$total_tasks tâches prêtes (${elapsed}s/{{.TIMEOUT}}s)"
+        
+        if [ "$running_tasks" -eq "$total_tasks" ] && [ "$total_tasks" -gt 0 ]; then
+          echo "✅ Stack '{{.STACK_NAME}}' complètement prête!"
+          break
+        fi
+        
+        # Afficher les services qui ne sont pas encore prêts
+        echo "🔍 Services en attente :"
+        docker stack ps {{.STACK_NAME}} --filter "desired-state=running" --format "table {{{{.Name}}}}\t{{{{.CurrentState}}}}" | grep -v "Running" | head -3
+        echo ""
+        
+        sleep {{.CHECK_INTERVAL}}
+      done
+
+  events:filtered:
+    desc: "Surveille les événements Docker avec filtres avancés"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Surveille les événements Docker avec des filtres personnalisés.
+
+      Variables:
+      - STACK_NAME: Filtrer par stack (optionnel)
+      - EVENT_TYPES: Types d'événements (start,stop,die,health_status, etc.)
+      - SINCE: Depuis quand (ex: "2h", "2023-01-01T00:00:00")
+
+      Exemple:
+      task docker:monitor:events:filtered STACK_NAME=production EVENT_TYPES="start,stop,die"
+    vars:
+      EVENT_TYPES: '{{.EVENT_TYPES | default "start,stop,die,health_status"}}'
+      SINCE: '{{.SINCE | default "1h"}}'
+    cmds:
+    - |
+      echo "📡 Surveillance des événements Docker..."
+      echo "🎯 Filtres :"
+      echo "   Types d'événements: {{.EVENT_TYPES}}"
+      echo "   Depuis: {{.SINCE}}"
+      if [ -n "{{.STACK_NAME}}" ]; then
+        echo "   Stack: {{.STACK_NAME}}"
+      fi
+      echo ""
+      echo "⏹️  Appuyez sur Ctrl+C pour arrêter"
+      echo ""
+
+      # Construire les filtres
+      filters="--since {{.SINCE}}"
+
+      # Ajouter les filtres d'événements
+      IFS=',' read -ra EVENT_ARRAY <<< "{{.EVENT_TYPES}}"
+      for event in "${EVENT_ARRAY[@]}"; do
+        event=$(echo "$event" | xargs)  # Trim whitespace
+        filters="$filters --filter event=$event"
+      done
+
+      # Ajouter le filtre de stack si spécifié
+      if [ -n "{{.STACK_NAME}}" ]; then
+        filters="$filters --filter label=com.docker.stack.namespace={{.STACK_NAME}}"
+      fi
+
+      echo "🔍 Commande: docker events $filters"
+      echo ""
+
+      docker events $filters --format "{{{{.Time}}}} [{{{{.Action}}}}] {{{{.Actor.Attributes.name}}}} ({{{{.Actor.Attributes.image}}}})"
