--- a/docker/stack/Taskfile.yml
+++ b/docker/stack/Taskfile.yml
@@ -218,6 +218,205 @@ tasks:
       docker-compose -f {{.COMPOSE_FILE}} config
       echo "✅ Fichier valide"
 
+  check:containers:ready:
+    desc: "Vérifie que les conteneurs spécifiés sont prêts"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Vérifie que les conteneurs d'une liste sont tous actifs et en bonne santé.
+
+      Variables:
+      - CONTAINERS: Liste des conteneurs séparés par des virgules (ex: "traefik,portainer")
+      - STACK_NAME: Nom de la stack (défaut: taskfiles-stack)
+      - TIMEOUT: Timeout en secondes (défaut: 300)
+
+      Exemple:
+      task docker:stack:check:containers:ready CONTAINERS="traefik,portainer" STACK_NAME=mon-app
+    vars:
+      TIMEOUT: '{{.TIMEOUT | default "300"}}'
+    cmds:
+    - |
+      if [ -z "{{.CONTAINERS}}" ]; then
+        echo "❌ CONTAINERS est requis (ex: 'traefik,portainer')"
+        exit 1
+      fi
+
+      echo "🔍 Vérification de l'état des conteneurs : {{.CONTAINERS}}"
+
+      # Convertir la liste en tableau
+      IFS=',' read -ra CONTAINER_ARRAY <<< "{{.CONTAINERS}}"
+
+      for container in "${CONTAINER_ARRAY[@]}"; do
+        container=$(echo "$container" | xargs)  # Trim whitespace
+        echo "📦 Vérification du conteneur: $container"
+        
+        # Vérifier si le conteneur existe et est en cours d'exécution
+        if docker ps --filter "name={{.STACK_NAME}}_${container}" --format "{{{{.Names}}}}" | grep -q "{{.STACK_NAME}}_${container}"; then
+          echo "✅ Conteneur $container est actif"
+        else
+          echo "❌ Conteneur $container n'est pas actif ou n'existe pas"
+          echo "📋 Conteneurs disponibles pour la stack {{.STACK_NAME}} :"
+          docker ps --filter "name={{.STACK_NAME}}" --format "table {{{{.Names}}}}	{{{{.Status}}}}"
+          exit 1
+        fi
+      done
+
+      echo "✅ Tous les conteneurs sont actifs!"
+
+  wait:containers:ready:
+    desc: "Attend que les conteneurs spécifiés soient prêts"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Attend que tous les conteneurs d'une liste soient actifs et en bonne santé.
+      Effectue des vérifications périodiques jusqu'au timeout.
+
+      Variables:
+      - CONTAINERS: Liste des conteneurs séparés par des virgules (ex: "traefik,portainer")
+      - STACK_NAME: Nom de la stack (défaut: taskfiles-stack)
+      - TIMEOUT: Timeout en secondes (défaut: 300)
+      - CHECK_INTERVAL: Intervalle entre les vérifications en secondes (défaut: 10)
+
+      Exemple:
+      task docker:stack:wait:containers:ready CONTAINERS="traefik,portainer" TIMEOUT=600
+    vars:
+      TIMEOUT: '{{.TIMEOUT | default "300"}}'
+      CHECK_INTERVAL: '{{.CHECK_INTERVAL | default "10"}}'
+    cmds:
+    - |
+      if [ -z "{{.CONTAINERS}}" ]; then
+        echo "❌ CONTAINERS est requis (ex: 'traefik,portainer')"
+        exit 1
+      fi
+
+      echo "⏳ Attente que les conteneurs soient prêts : {{.CONTAINERS}}"
+      echo "🕐 Timeout: {{.TIMEOUT}}s, Intervalle de vérification: {{.CHECK_INTERVAL}}s"
+
+      start_time=$(date +%s)
+      timeout_time=$((start_time + {{.TIMEOUT}}))
+
+      # Convertir la liste en tableau
+      IFS=',' read -ra CONTAINER_ARRAY <<< "{{.CONTAINERS}}"
+
+      while true; do
+        current_time=$(date +%s)
+        
+        if [ $current_time -gt $timeout_time ]; then
+          echo "❌ Timeout atteint ({{.TIMEOUT}}s). Les conteneurs ne sont pas tous prêts."
+          exit 1
+        fi
+        
+        all_ready=true
+        
+        for container in "${CONTAINER_ARRAY[@]}"; do
+          container=$(echo "$container" | xargs)  # Trim whitespace
+          
+          if ! docker ps --filter "name={{.STACK_NAME}}_${container}" --format "{{{{.Names}}}}" | grep -q "{{.STACK_NAME}}_${container}"; then
+            all_ready=false
+            break
+          fi
+        done
+        
+        if [ "$all_ready" = true ]; then
+          echo "✅ Tous les conteneurs sont prêts!"
+          break
+        fi
+        
+        elapsed=$((current_time - start_time))
+        echo "⏳ Attente... (${elapsed}s/{{.TIMEOUT}}s)"
+        sleep {{.CHECK_INTERVAL}}
+      done
+
+  check:containers:health:
+    desc: "Vérifie la santé des conteneurs avec healthcheck"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Vérifie l'état de santé des conteneurs qui ont un healthcheck configuré.
+
+      Variables:
+      - CONTAINERS: Liste des conteneurs séparés par des virgules (ex: "traefik,portainer")
+      - STACK_NAME: Nom de la stack (défaut: taskfiles-stack)
+    cmds:
+    - |
+      if [ -z "{{.CONTAINERS}}" ]; then
+        echo "❌ CONTAINERS est requis (ex: 'traefik,portainer')"
+        exit 1
+      fi
+
+      echo "🏥 Vérification de la santé des conteneurs : {{.CONTAINERS}}"
+
+      # Convertir la liste en tableau
+      IFS=',' read -ra CONTAINER_ARRAY <<< "{{.CONTAINERS}}"
+
+      for container in "${CONTAINER_ARRAY[@]}"; do
+        container=$(echo "$container" | xargs)  # Trim whitespace
+        full_name="{{.STACK_NAME}}_${container}"
+        
+        echo "🔍 Vérification de $container..."
+        
+        # Vérifier si le conteneur existe
+        if ! docker ps --filter "name=$full_name" --format "{{{{.Names}}}}" | grep -q "$full_name"; then
+          echo "❌ Conteneur $container n'existe pas ou n'est pas actif"
+          continue
+        fi
+        
+        # Obtenir l'état de santé
+        health_status=$(docker inspect $full_name --format='{{{{.State.Health.Status}}}}' 2>/dev/null || echo "no-healthcheck")
+        
+        case $health_status in
+          "healthy")
+            echo "✅ $container: Sain"
+            ;;
+          "unhealthy")
+            echo "❌ $container: Non sain"
+            ;;
+          "starting")
+            echo "🟡 $container: Démarrage en cours"
+            ;;
+          "no-healthcheck")
+            echo "ℹ️  $container: Pas de healthcheck configuré"
+            ;;
+          *)
+            echo "❓ $container: État inconnu ($health_status)"
+            ;;
+        esac
+      done
+
+  deploy:with:wait:
+    desc: "Déploie une stack et attend que les conteneurs soient prêts"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Déploie une stack et attend que les conteneurs spécifiés soient actifs.
+
+      Variables:
+      - STACK_NAME: Nom de la stack (défaut: taskfiles-stack)
+      - COMPOSE_FILE: Fichier docker-compose (défaut: docker-compose.yml)
+      - CONTAINERS: Liste des conteneurs à vérifier (ex: "traefik,portainer")
+      - TIMEOUT: Timeout en secondes (défaut: 300)
+
+      Exemple:
+      task docker:stack:deploy:with:wait CONTAINERS="traefik,portainer" TIMEOUT=600
+    cmds:
+    - task: deploy
+    - |
+      if [ -n "{{.CONTAINERS}}" ]; then
+        task docker:stack:wait:containers:ready CONTAINERS="{{.CONTAINERS}}" STACK_NAME="{{.STACK_NAME}}" TIMEOUT="{{.TIMEOUT | default \"300\"}}"
+      else
+        echo "ℹ️  Aucun conteneur spécifique à vérifier (CONTAINERS non défini)"
+        echo "⏳ Attente de 30 secondes pour la stabilisation..."
+        sleep 30
+      fi
+
   full-deploy:
     desc: "Déploiement complet : validation + construction + déploiement"
     silent: true
@@ -243,5 +442,33 @@ tasks:
     - |
       echo "⏳ Attente du déploiement..."
       sleep 5
+    - task: docker:stack:services
+    - task: docker:stack:ps
+
+  full-deploy:with:wait:
+    desc: "Déploiement complet avec attente des conteneurs"
+    silent: true
+    preconditions:
+    - sh: command -v docker
+      msg: "Docker n'est pas installé ou accessible"
+    summary: |
+      Effectue un déploiement complet et attend que les conteneurs soient prêts :
+      1. Validation du fichier docker-compose
+      2. Construction des images si nécessaire
+      3. Déploiement de la stack
+      4. Attente que les conteneurs soient actifs
+      5. Vérification du statut
+
+      Variables:
+      - STACK_NAME: Nom de la stack (défaut: taskfiles-stack)
+      - COMPOSE_FILE: Fichier docker-compose (défaut: docker-compose.yml)
+      - CONTAINERS: Liste des conteneurs à vérifier (ex: "traefik,portainer")
+      - TIMEOUT: Timeout en secondes (défaut: 300)
+    cmds:
+    - task: docker:stack:validate
+    - |
+      echo "🔨 Construction des images..."
+      docker-compose -f {{.COMPOSE_FILE}} build
+    - task: deploy:with:wait
     - task: docker:stack:services
     - task: docker:stack:ps
