--- a/docker/stack/Taskfile.yml
+++ b/docker/stack/Taskfile.yml
@@ -245,20 +245,23 @@ tasks:
 
       echo "🔍 Vérification de l'état des conteneurs : {{.CONTAINERS}}"
 
-      # Convertir la liste en tableau
-      IFS=',' read -ra CONTAINER_ARRAY <<< "{{.CONTAINERS}}"
+      # Convertir la liste en tableau compatible POSIX
+      containers_list="{{.CONTAINERS}}"
 
-      for container in "${CONTAINER_ARRAY[@]}"; do
+      # Remplacer les virgules par des espaces et traiter chaque conteneur
+      containers_clean=$(echo "$containers_list" | tr ',' ' ')
+
+      for container in $containers_clean; do
         container=$(echo "$container" | xargs)  # Trim whitespace
         echo "📦 Vérification du conteneur: $container"
         
         # Vérifier si le conteneur existe et est en cours d'exécution
-        if docker ps --filter "name={{.STACK_NAME}}_${container}" --format "{{{{.Names}}}}" | grep -q "{{.STACK_NAME}}_${container}"; then
+        if docker ps --filter "name={{.STACK_NAME}}_${container}" --format "{{.Names}}" | grep -q "{{.STACK_NAME}}_${container}"; then
           echo "✅ Conteneur $container est actif"
         else
           echo "❌ Conteneur $container n'est pas actif ou n'existe pas"
           echo "📋 Conteneurs disponibles pour la stack {{.STACK_NAME}} :"
-          docker ps --filter "name={{.STACK_NAME}}" --format "table {{{{.Names}}}}	{{{{.Status}}}}"
+          docker ps --filter "name={{.STACK_NAME}}" --format "table {{.Names}}\t{{.Status}}"
           exit 1
         fi
       done
