feat: Add comprehensive Taskfile for help and documentation
- Created a new Taskfile.yml in the help directory to centralize help tasks for various namespaces.
- Added detailed help commands for namespaces: docker, nodejs, env, download, utils, and a quick start guide.
- Implemented a new Taskfile for managing Node.js devDependencies, including tasks for adding, listing, checking, and removing dependencies.
- Introduced a new Taskfile for handling Node.js dependencies in a separate deps directory.
- Removed package.json and package-lock.json as they are no longer needed.
- Enhanced the utils Taskfile with backup, clean, and system utilities, including aliases for compatibility.
- Created a backup Taskfile to manage project backups, including creation, listing, restoring, and cleaning old backups.
- Developed a clean Taskfile to manage log and temporary file cleanup, as well as cache cleaning for development tools.
- Added a system Taskfile to display system information, resource usage, network details, performance metrics, and environment variables.

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,26 @@
 
 # Informations du projet
 PROJECT_NAME=taskfiles-collection
+PROJECT_VERSION=1.0.0
 ENVIRONMENT=development
+
+# Variables Docker (si utilisées)
+CONTAINER_NAME=
+IMAGE_NAME=
+STACK_NAME=taskfiles-stack
+
+# Variables de monitoring
+TIMEOUT=300
+CHECK_INTERVAL=10
+LOG_LEVEL=INFO
+
+# Variables Node.js (si utilisées)
+NODE_ENV=development
+PORT=3000
+
+# Variables de sauvegarde
+BACKUP_DIR=./backups
+
+# Variables de téléchargement d'outils
+TOOLS_DIR=./tools/php
+FORCE=false
