--- a/nodejs/Taskfile.yml
+++ b/nodejs/Taskfile.yml
@@ -1,5 +1,13 @@
 version: 3
 # Taskfile pour les projets Node.js
+
+includes:
+  deps: ./deps
+
+vars:
+  DEV_DEPS: >
+    all-contributors-cli cypress generate-changelog gitmoji-changelog jscpd license-checker markdownlint-cli npm-run-all readme-md-generator semantic-git-commit-cli yaml
+
 tasks:
   install:
     desc: "Installe les dépendances Node.js"
@@ -17,3 +25,16 @@ tasks:
     - sh: command -v npm
     cmds:
     - npm init -y
+
+  # Alias pour compatibilité avec les commandes existantes
+  add-dev-deps:
+    desc: "Ajoute les devDependencies communes si elles ne sont pas déjà présentes (utilise deps:add)"
+    silent: true
+    cmds:
+    - task: deps:add
+
+  add-dev-deps-force:
+    desc: "Ajoute/met à jour toutes les devDependencies communes (utilise deps:add-force)"
+    silent: true
+    cmds:
+    - task: deps:add-force
